dark mode colours fix

--- a/src/components/question-toggler/question-toggler.styles.scss
+++ b/src/components/question-toggler/question-toggler.styles.scss
@@ -20,6 +20,7 @@
         margin: 0;
         font-size: 16px;
         font-weight: 600;
+        color: black;
       }
   
       /* Arrow icon */
