--- a/src/components/routes/contacts/contacts.styles.scss
+++ b/src/components/routes/contacts/contacts.styles.scss
@@ -10,6 +10,10 @@
       margin-bottom: 20px;
       color: black;
     }
+
+    h4 {
+        color: black;
+    }
     
     p {
       margin: 10px 0;
