--- a/src/components/routes/purchase/purchase.styles.scss
+++ b/src/components/routes/purchase/purchase.styles.scss
@@ -8,6 +8,11 @@
   
     h2 {
       margin-bottom: 20px;
+      color: black;
+    }
+
+    h3{
+        color: black;
     }
   
     p {
